--- a/1. HTML-CSS/1.4. BEM/sass/blocks/rows/_row-2.scss
+++ b/1. HTML-CSS/1.4. BEM/sass/blocks/rows/_row-2.scss
@@ -30,7 +30,7 @@
 
     &--title {
       width: 635px;
-      color: #000;
+      color: black;
       font-family: $primaryFont;
       font-size: 21px;
       letter-spacing: 0.9px;
@@ -46,15 +46,15 @@
     }
 
     &--description {
-      color: #e84c3d;
+      color: $secondaryColor;
       font-family: $secondaryFont;
       font-size: 20px;
       padding-bottom: 2px;
     }
 
     &--line {
-      background-color: $primaryColor;
-      border-top: 1px solid $primaryColor;
+      background-color: $primaryColorLight;
+      border-top: 1px solid $primaryColorLight;
       width: 100%;
     }
 
@@ -90,13 +90,13 @@
     }
 
     &--title {
-      color: #000;
-      font-family: Lato-Bold;
+      color: black;
+      font-family: $secondaryFontBold;
       font-size: 16px;
     }
 
     &--description {
-      color: #666666;
+      color: $primaryColorDark;
       font-family: $secondaryFont;
       font-size: 14px;
       margin-top: 8px;
@@ -107,13 +107,14 @@
       background-color: $secondaryColor;
       border: none;
       border-radius: 25px;
-      color: #fff;
-      font-family: Oswald-Regular;
+      color: white;
+      font-family: $buttonFont;
       font-size: 14px;
       height: 35px;
       margin-top: 33px;
       text-transform: uppercase;
       width: 70px;
+      outline: none;
     }
   }
 
